import java.util.List;

public interface ITaskFilter {
    List<Task> filter(List<Task> tasks);
    }
