public enum Priority {
    LOW,
    MEDIUM,
    HIGH,
    URGENT
}
