@startuml
skinparam classAttributeIconSize 0

title ToDo Application

enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

enum TaskStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

class Task {
  - id: String
  - title: String
  - description: String
  - priority: Priority
  - dueDate: LocalDate
  - status: TaskStatus
  - createdDate: LocalDate
}

interface ITaskRepository {
  + add(task: Task): void
  + remove(id: String): boolean
  + update(task: Task): boolean
  + findById(id: String): Task
  + getAll(): List<Task>
}

class TaskRepository {
  - tasks: Map<String, Task>
}

interface ITaskFilter {
  + filter(tasks: List<Task>): List<Task>
}

class PriorityFilter {
  - priority: Priority
}

class StatusFilter {
  - status: TaskStatus
}

class TaskService {
  - repository: ITaskRepository
  + createTask(title: String, description: String, priority: Priority, dueDate: LocalDate): Task
  + deleteTask(id: String): boolean
  + updateTask(id: String, title: String, description: String, priority: Priority, dueDate: LocalDate, status: TaskStatus): boolean
  + getTask(id: String): Task
  + getAllTasks(): List<Task>
  + filterByStatus(status: TaskStatus): List<Task>
  + filterByPriority(priority: Priority): List<Task>
  + applyFilter(filter: ITaskFilter): List<Task>
  + getStatistics(): String
}

class InputHandler {
  + readInt(prompt: String): int
  + readString(prompt: String): String
  + readDate(prompt: String): LocalDate
  + readPriority(prompt: String): Priority
  + readStatus(prompt: String): TaskStatus
}

class MenuHandler {
  + showMainMenu(): void
  + showFilterMenu(): void
  + showUpdateMenu(): void
}

class DisplayHandler {
  + showTask(task: Task): void
  + showTaskList(tasks: List<Task>): void
  + showStatistics(stats: String): void
  + showMessage(message: String): void
  + showError(error: String): void
}

class TodoApp {
  - taskService: TaskService
  - inputHandler: InputHandler
  - menuHandler: MenuHandler
  - displayHandler: DisplayHandler
  + run(): void
}

class Main {
  + main(args: String[]): void
}

Task --> Priority
Task --> TaskStatus

ITaskRepository --> Task

ITaskFilter <|.. PriorityFilter
ITaskFilter <|.. StatusFilter
PriorityFilter --> Priority
StatusFilter --> TaskStatus
PriorityFilter --> Task
StatusFilter --> Task

TaskService --> ITaskRepository
TaskService --> Task
TaskService --> Priority
TaskService --> TaskStatus
TaskService ..> ITaskFilter

TodoApp --> TaskService
TodoApp --> InputHandler
TodoApp --> MenuHandler
TodoApp --> DisplayHandler

Main --> TaskRepository
Main --> TaskService
Main --> InputHandler
Main --> MenuHandler
Main --> DisplayHandler
Main --> TodoApp

@enduml
